<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/background_color" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-60dp"
        android:text="@string/oder_tracking"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="15dp"
        app:cardBackgroundColor="#A0EAF3"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/im4" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/item01"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="4dp"
                android:text="@string/shampoo_bar_seth" />

            <TextView
                android:id="@+id/item02"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item01"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="3dp"
                android:layout_marginTop="20dp"
                android:text="@string/hair_care" />

            <TextView
                android:id="@+id/item03"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item02"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="3dp"
                android:text="@string/price_20_05" />
            <TextView
                android:id="@+id/item05"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item03"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="3dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/net_total_1_20_05" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item03"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/item04"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/item03"
                    android:layout_alignParentEnd="true"
                    android:text="QTY"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:entries="@array/Qty" />

            </LinearLayout>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/payment_reference_code"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tracking_code"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/textView8"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:layout_marginRight="10dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:text="@string/cancle_order" />

    </LinearLayout>



</LinearLayout>